# Pulse

./: .coveragerc  .dockerignore  .gitignore  DIARIO.md  QA_REPORT.md  README.md
deploy/: .env.probe.example  .env.server.example  docker-compose.probe.yml  docker-compose.server.yml  docker-compose.yml  schema.sql  (+4 more)
frontend_common/: pyproject.toml  requirements.txt
frontend_common/pulse_fe_common/: __init__.py  auth.py  config.py  datatables.py  datetimes.py  http_client.py  rbac.py
frontend_common/pulse_fe_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend_common/tests/: test_auth.py  test_config.py  test_datatables.py  test_datetimes.py  test_http_client.py  test_rbac.py
probe/nmap-proxy/: .env.example  README.md  install-windows.ps1  pyproject.toml  requirements.txt  uninstall-windows.ps1
probe/nmap-proxy/pulse_nmap_proxy/: __init__.py  __main__.py  app.py  config.py  gen_certs.py
probe/nmap-proxy/tests/: test_app.py  test_gen_certs.py
server/backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
server/backend/pulse_server/: __init__.py  audit.py  commands.py  config.py  context.py  db.py  deps.py  errors.py  main.py  middleware.py  models.py  nominatim.py  notifications.py  proxy.py  schemas.py  security.py  serializers.py  workflow.py
server/backend/pulse_server/routers/: __init__.py  _helpers.py  auth.py  dashboard.py  health.py  inbound.py  nominatim.py  notifications.py  observability.py  probe_comm.py  probes.py  roles.py  systems.py  users.py  workflows.py
server/backend/tests/: conftest.py  test_auth.py  test_commands.py  test_coverage_100.py  test_dashboard_proxy.py  test_db_proxy.py  test_errors.py  test_extra_coverage.py  test_inbound_identities.py  test_misc_coverage.py  test_nominatim_gateway.py  test_notifications.py  test_observability.py  test_probe_comm.py  test_probes.py  test_roles_permissions.py  test_scans_proxy.py  test_security_headers.py  test_sort.py  test_system_logs.py  test_systems_checks.py  test_systems_test_endpoint.py  test_unit_notifications.py  test_unit_security.py  test_unit_workflow.py  test_users.py  test_workflow_engine_db.py  test_workflows_alarms.py
(+580 files in other folders)
